--- a/index.html
+++ b/index.html
@@ -1,128 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grow a Garden Free Pets Generator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #a8e6cf, #dcedc1);
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #ffb347;
-            padding: 20px 0;
-            color: #fff;
-            font-size: 2rem;
-            font-weight: bold;
-        }
-        .subtitle {
-            font-size: 1.2rem;
-            margin: 10px 0 30px 0;
-            color: #333;
-        }
-        .pets-container {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 20px;
-            padding: 0 10px;
-        }
-        .pet {
-            background-color: #fff;
-            border-radius: 12px;
-            padding: 10px;
-            width: 150px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            cursor: pointer;
-            transition: transform 0.2s;
-        }
-        .pet img {
-            width: 100px;
-            height: 100px;
-        }
-        .pet.selected {
-            border: 3px solid #ff6f61;
-            transform: scale(1.05);
-        }
-        #submit-btn {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 1rem;
-            background-color: #ff6f61;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-        }
-        #submit-btn:disabled {
-            background-color: gray;
-            cursor: not-allowed;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Robux Generator</title>
+
+<style>
+    body {
+        background: #0d1117;
+        color: white;
+        font-family: Arial, sans-serif;
+        text-align: center;
+        padding: 0;
+        margin: 0;
+    }
+
+    header {
+        padding: 25px;
+        font-size: 2.5rem;
+        font-weight: bold;
+        background: #11161d;
+        border-bottom: 2px solid #00d447;
+    }
+
+    .box {
+        background: #161b22;
+        width: 400px;
+        padding: 25px;
+        margin: 40px auto;
+        border-radius: 12px;
+        box-shadow: 0px 0px 15px rgba(0,255,100,0.3);
+    }
+
+    input, select {
+        padding: 12px;
+        width: 90%;
+        border-radius: 8px;
+        border: none;
+        margin-bottom: 15px;
+    }
+
+    #generate-btn {
+        padding: 15px;
+        width: 95%;
+        font-size: 1.2rem;
+        background: #00e053;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        color: black;
+        transition: 0.2s;
+        font-weight: bold;
+    }
+
+    #generate-btn:hover {
+        transform: scale(1.05);
+        background: #00ff63;
+    }
+
+    #console-box {
+        background: #0f1318;
+        margin-top: 20px;
+        height: 160px;
+        overflow-y: auto;
+        font-size: 0.9rem;
+        padding: 10px;
+        border-radius: 8px;
+        text-align: left;
+        display: none;
+        border: 1px solid #00ff4c;
+    }
+
+    .footer {
+        margin-top: 40px;
+        font-size: 1rem;
+        opacity: 0.7;
+    }
+
+    .prank {
+        margin-top: 10px;
+        font-size: 1rem;
+        color: #ffeb3b;
+        font-weight: bold;
+    }
+</style>
 </head>
+
 <body>
 
-<header>Grow a Garden Free Pets Generator</header>
-<p class="subtitle">Pick your favorite 3 pets! After you choose your pets, please enter your username, and you will be teleported to a private server with a bot that will give you the submitted pets!
-<div class="pets-container">
-    <div class="pet" data-name="Racoon">
-        <img src="racoon.png" alt="Racoon">
-        <p>Racoon</p>
-    </div>
-    <div class="pet" data-name="Dragonfly">
-        <img src="dragonfly.png" alt="Dragonfly">
-        <p>Dragonfly</p>
-    </div>
-    <div class="pet" data-name="Queen Bee">
-        <img src="queenbee.png" alt="Queen Bee">
-        <p>Queen Bee</p>
-    </div>
-    <div class="pet" data-name="Mimic">
-        <img src="mimic.png" alt="Mimic">
-        <p>Mimic</p>
-    </div>
-    <div class="pet" data-name="Red Kitsune">
-        <img src="redkitsune.png" alt="Red Kitsune">
-        <p>Red Kitsune</p>
-    </div>
-    <div class="pet" data-name="Disco Bee">
-        <img src="discobee.png" alt="Disco Bee">
-        <p>Disco Bee</p>
-    </div>
+<header>Robux Generator</header>
+
+<div class="box">
+    <h2>Enter Roblox Username</h2>
+
+    <input type="text" id="user" placeholder="Roblox Username">
+
+    <h3>Select Robux Amount</h3>
+    <select id="amount">
+        <option value="1000">1,000 Robux</option>
+        <option value="5000">5,000 Robux</option>
+        <option value="10000">10,000 Robux</option>
+        <option value="50000">50,000 Robux</option>
+    </select>
+
+    <button id="generate-btn">Generate Robux</button>
+
+    <div id="console-box"></div>
 </div>
 
-<button id="submit-btn" disabled>Submit</button>
+<p class="footer">All processes shown are simulated.</p>
+<p class="prank">THIS IS A PRANK SITE 😂</p>
 
 <script>
-    const pets = document.querySelectorAll('.pet');
-    const submitBtn = document.getElementById('submit-btn');
-    let selectedPets = [];
+const btn = document.getElementById("generate-btn");
+const consoleBox = document.getElementById("console-box");
 
-    pets.forEach(pet => {
-        pet.addEventListener('click', () => {
-            const name = pet.dataset.name;
-            if(selectedPets.includes(name)) {
-                selectedPets = selectedPets.filter(p => p !== name);
-                pet.classList.remove('selected');
-            } else if(selectedPets.length < 3) {
-                selectedPets.push(name);
-                pet.classList.add('selected');
-            }
-            submitBtn.disabled = selectedPets.length !== 3;
-        });
-    });
+btn.addEventListener("click", () => {
+    let user = document.getElementById("user").value.trim();
+    let amount = document.getElementById("amount").value;
 
-    submitBtn.addEventListener('click', () => {
-        const username = prompt("Enter your Roblox username:");
-        if(username) {
-            alert(`Thank you, ${username}! Your pets (${selectedPets.join(', ')}) will be delivered in 10-24 hours.`);
-            window.location.href = "https://roblox.com.ge/games/126884695634066/Grow-a-Garden?privateServerLinkCode=62908718680135295233044959330497";
+    if (!user) {
+        alert("Please enter a Roblox username.");
+        return;
+    }
+
+    consoleBox.style.display = "block";
+    consoleBox.innerHTML = "";
+
+    const logs = [
+        "Connecting to Roblox servers...",
+        "Establishing secure session...",
+        "Fetching user profile: " + user + "...",
+        "Checking account status...",
+        "Injecting " + amount + " Robux...",
+        "Finishing process...",
+        "Success! Preparing claim method..."
+    ];
+
+    let index = 0;
+
+    let interval = setInterval(() => {
+        if (index < logs.length) {
+            consoleBox.innerHTML += logs[index] + "<br>";
+            consoleBox.scrollTop = consoleBox.scrollHeight;
+            index++;
+        } else {
+            clearInterval(interval);
+
+            setTimeout(() => {
+                alert("To claim your Robux, you must join this group.");
+                window.location.href = "https://roblox.al/communities/6743910039/";
+            }, 800);
         }
-    });
+    }, 900);
+});
 </script>
 
 </body>
