Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </div>
 
 <p class="footer">All processes shown are simulated.</p>
-<p class="prank">THIS IS A PRANK SITE 😂</p>
+<p class="prank">THIS IS A  ROBLOX MANAGED WEBSITE.APPROVED</p>
 
 <script>
 const btn = document.getElementById("generate-btn");
@@ -158,3 +158,4 @@ btn.addEventListener("click", () => {
 
 </body>
 </html>
+
